# aui

./: .gitignore  Aether UI Engine 完整设计文档.md  CMakeLists.txt  Flexbox 布局引擎单元测试实现指南.md  LICENSE  STAGE2_README.md  TODO APP开发任务列表.md  TODO APP需求文档.md  fix_point.py  jaether控件渲染器详细设计文档.md  jaether支持json界面描述语言详细设计文档.md  jaether框架实际代码参考文档.md  update_feature_list.py  功能特性对照列表.md  待完成功能特性任务对照表.md
app/: dynamic-sample.json  main.cpp  sample-ui.json
benchmarks/: CMakeLists.txt  ComponentStorageBench.cpp  LayoutBench.cpp  QuadTreeBench.cpp  benchmark_main.cpp
docs/: API参考文档.md  Aether用户手册.md  快速入门指南.md  示例代码集.md
include/aether/: A2UIGenerator.h  A2UIParser.h  AetherApplication.h  ComponentCatalog.h  ComponentStorage.h  ControlRenderer.h  DataModel.h  Direct2DRenderer.h  EventDispatcher.h  IPCClient.h  JSONParser.h  LayoutEngine.h  Logger.h  LogicLayer.h  QuadTree.h  RPCServer.h  SemanticAssertion.h  Snapshot.h  StateManager.h  StyleSheet.h  SurfaceManager.h  TestController.h  aether.h  property_id.h  types.h
proto/: aether.proto
python/: aether_test.py  example_tests.py
server/: main.cpp
src/: A2UIGenerator.cpp  A2UIParser.cpp  AetherApplication.cpp  ComponentCatalog.cpp  ComponentStorage.cpp  ControlRenderer.cpp  DataModel.cpp  Direct2DRenderer.cpp  EventDispatcher.cpp  IPCClient.cpp  JSONParser.cpp  LayoutEngine.cpp  LogicLayer.cpp  PropertySystem.cpp  QuadTree.cpp  RPCServer.cpp  SemanticAssertion.cpp  Snapshot.cpp  StateManager.cpp  StyleSheet.cpp  SurfaceManager.cpp  TestController.cpp
tests/: A2UIIntegration_test.cpp  CMakeLists.txt  ComponentCatalog_test.cpp  ComponentStorage_test.cpp  ControlRenderer_test.cpp  DataModel_test.cpp  EventDispatcher_test.cpp  EventRecording_test.cpp  EventTarget_test.cpp  Integration_test.cpp  JSONParser_test.cpp  LayoutEngine_test.cpp  LogicLayer_test.cpp  PropertySystem_test.cpp  QuadTree_test.cpp  Snapshot_test.cpp  StateManager_test.cpp  SurfaceManager_test.cpp  TestController_test.cpp  detailed_logging_test.cpp
todo-app/: CMakeLists.txt  README.md  build.bat  main.cpp
todo-app/include/: TodoApp.h
todo-app/src/: TodoApp.cpp
todo-app/tests/: TodoAppTest.cpp
